# spark-mojo-platform

./: .coverage  .env.example  .gitignore  .gitleaks.toml  ADR-design-system.md  AGENT-RULES.md  BILL-006-COMPLETE  BILL-007-COMPLETE  BILL-008-COMPLETE  BILL-009-COMPLETE  BILL-010-COMPLETE  BLOCKED-FIX-41-004.md  BLOCKED-FRAPPE-SDK-REFACTOR.md  BLOCKED-INFRA-001.md  BLOCKED-INFRA-002.md  BLOCKED-INFRA-003.md  BLOCKED-INFRA-004.md  BLOCKED-INFRA-005.md  BLOCKED-INFRA-006.md  BLOCKED-INFRA-007-drive.md  BLOCKED-INFRA-007-insights.md  BLOCKED-INFRA-007.md  BLOCKED-SEC-002-DEPLOY.md  BLOCKED-STORY-003.md  BUG-008-COMPLETE  CHECK-CERTS.sh  CLAUDE.md  COMPONENT_INVENTORY.md  DEPLOY.md  Dockerfile.frappe  FIX-CERTS.sh  HEALTH-BLOCKED.md  HOTFIX-LEGACY-URLS-COMPLETE.md  HOTFIX-POC-502.md  INFRA-CLEANUP.md  INFRA-TRAEFIK-COMPLETE  INFRA-TRAEFIK.md  MORNING-TEST-PLAN.md  PLAN-BILL-006.md  PLAN-BILL-007.md  (+53 more)
frappe-apps/sm_billing/: pyproject.toml
frappe-apps/sm_billing/sm_billing/: hooks.py  modules.txt  patches.txt
frappe-apps/sm_billing/sm_billing/sm_billing/: appeal_letter_generator.py  denial_classifier.py
frappe-apps/sm_widgets/: VERIFY.txt  pyproject.toml
frappe-apps/sm_widgets/sm_widgets/: hooks.py  modules.txt  portal_seat_metering.py  sales_invoice_item_hooks.py  seat_metering.py  subscription_hooks.py
frappe-apps/sm_widgets/sm_widgets/fixtures/: client_script_sm_invoice_send_button.json  custom_field_billing.json  dunning_types_sm.json  email_template_dunning_sm.json  print_format_sm_mojo_grouped_invoice.json  workflow_sm_managed_invoice_approval.json
(+641 files in other folders)
