[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sm_billing"
authors = [{name = "Spark Mojo", email = "dev@sparkmojo.com"}]
description = "Spark Mojo Billing Module — insurance claims, ERA processing, payment management"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.flit.module]
name = "sm_billing"
