[project]
name = "sm_widgets"
authors = [
    { name = "Spark Mojo", email = "dev@sparkmojo.com" }
]
description = "Custom DocTypes for Spark Mojo Platform"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sm_widgets"
